# derivetable-rs

./: Cargo.toml  README.md
derivetable_derive/: Cargo.toml
derivetable_derive/src/: lib.rs
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs
